<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorRed"
    >

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/connection" />
    <TextView
        android:id="@+id/tvConnection"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="110dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="150dp"
        android:text="@string/longitude"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/errorGeoInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="200dp"
        android:text="@string/latitude"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/errorGeoInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="250dp"
        android:text="@string/accuracy"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/errorGeoInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batterie"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="300dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tvBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="300dp"
        android:text="@string/notConnected"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvAlarm"
        android:layout_width="362dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="350dp"
        android:text="@string/alarmcalled"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_cancel_alarm"
        android:layout_width="175dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/cancel"
        android:textSize="20sp" />

</RelativeLayout>