<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sos"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="580dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_sos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorRed"
        android:backgroundTint="@color/colorRed"
        android:text="@string/sos"
        android:textColor="@color/colorWhite"
        android:textSize="75sp" />

</LinearLayout>