...
    <include
        layout="@layout/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/tvStatusbracelet"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="400dp"
        android:text="@string/nobraceletconnected"
        android:textSize="30sp"
        android:layout_marginLeft="5dp"
...
