<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorRed"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="411dp"
            android:layout_height="218dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/notfallapplogo"
            android:contentDescription="@string/logo" />

        <!-- Username Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel"
            app:startIconDrawable="@drawable/user"
            app:startIconTint="@color/colorDark"
            app:errorEnabled="true"
            app:errorTextColor="@color/colorDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/username"
                android:inputType="text"
                android:text="sosapp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/colorDark"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            app:passwordToggleTint="@color/colorDark"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextColor="@color/colorDark">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:text="gTN52PoeUQ"
                android:autofillHints=""
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_login"
            android:layout_width="295dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorWhite"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/loginbutton"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/error_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:textColor="@color/colorDark"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>