...
    <!-- Button SOS -->
    <string name="sos">SOS</string>

    <!-- Button bar -->
    <string name="btnHome">Button Home</string>
    <string name="btnAlarms">Button Alarms</string>
    <string name="btnContact">Button Contact</string>
    <string name="btnSettings">Button Settings</string>

    <!-- Contacts -->
    <string name="noContacts">Sie besitzen leider noch keine Kontakte!</string>
    <string name="contactName">Name</string>
    <string name="contactActive">Aktiv</string>
...
    <string name="connect">Verbinden</string>
    <string name="noDeviceToPair">Hoppla, anscheinend haben Sie noch kein Gerät verbunden.
                                Bitte versuchen sie Ihr Gerät zuverbinden.</string>
    <!-- DIALOG -->
    <!-- Sure dialog -->
    <string name="confirm">Bestätigen</string>
    <string name="Yes">JA</string>
    <string name="No">NEIN</string>
    <!--OK dialog -->
    <string name="noPermission">Fehlende Berechtigungen</string>
    <string name="noPermissionText">Leider konnten wir nicht die notwendigen Berechtigungen von Ihnen erhalten.
                                    Deshalb können Sie die App nur eingeschränkt nutzen!</string>
    <string name="noGPS">Leider benötigen wir GPS damit wir im Falle eines Alarms ihr Position kennen.</string>
...
